tried a second commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
             </div><!-- fourth -->
 
             <div class="fifth">
-                <img src="images\bg-quotes.png" alt="">
+                <img src="images\bg-quotes.png" alt="quotes">
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div><!-- fifth -->
 
             <div class="footer">
