--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
             <div class="fifth">
                 <img src="images\bg-quotes.png" alt="quotes">
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div >
+                    <div class="boxes"></div>
+                    <div class="boxes"></div>
+                    <div class="boxes"></div>
                 </div>
             </div><!-- fifth -->
 
